first edit to name

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": "https://pankajvaghela.github.io/",
   "eslintConfig": {
     "extends": "react-app"
   },
