--- a/package.json
+++ b/package.json
@@ -3,26 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^5.6.4",
     "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^26.0.10",
     "@types/node": "^14.6.0",
+    "@types/reach__router": "^1.3.5",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
+    "@types/react-typist": "^2.0.1",
+    "antd": "^4.6.1",
+    "craco-less": "^1.17.0",
+    "framer-motion": "^2.6.5",
+    "less-loader": "^7.0.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
+    "react-spring": "^8.0.27",
+    "react-typist": "^2.0.5",
+    "tsc": "^1.20150623.0",
     "typescript": "^4.0.2"
   },
   "scripts": {
     "predeploy": "yarn run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "rstart": "react-scripts start",
+    "rbuild": "react-scripts build",
+    "rtest": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "homepage": "https://pankajvaghela.github.io/",
@@ -43,5 +56,10 @@
   },
   "devDependencies": {
     "gh-pages": "^3.1.0"
+  },
+  "bit": {
+    "env": {},
+    "componentsDefaultDirectory": "components/{name}",
+    "packageManager": "npm"
   }
 }
