--- a/package.json
+++ b/package.json
@@ -2,31 +2,6 @@
   "name": "mygithub",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@craco/craco": "^5.6.4",
-    "@reach/router": "^1.3.4",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^26.0.10",
-    "@types/node": "^14.6.0",
-    "@types/reach__router": "^1.3.5",
-    "@types/react": "^16.9.46",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-typist": "^2.0.1",
-    "antd": "^4.6.1",
-    "craco-less": "^1.17.0",
-    "framer-motion": "^2.6.5",
-    "less-loader": "^7.0.0",
-    "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
-    "react-spring": "^8.0.27",
-    "react-typist": "^2.0.5",
-    "tsc": "^1.20150623.0",
-    "typescript": "^4.0.2"
-  },
   "scripts": {
     "predeploy": "yarn run build",
     "deploy": "gh-pages -d build",
@@ -54,7 +29,37 @@
       "last 1 safari version"
     ]
   },
+  "resolutions": {
+    "styled-components": "^5"
+  },
+  "dependencies": {
+    "@craco/craco": "^5.6.4",
+    "@reach/router": "^1.3.4",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "antd": "^4.6.1",
+    "craco-less": "^1.17.0",
+    "framer-motion": "^2.6.5",
+    "less-loader": "^7.0.0",
+    "node-sass": "^4.14.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.3",
+    "react-spring": "^8.0.27",
+    "react-typist": "^2.0.5",
+    "styled-components": "^5.2.0",
+    "tsc": "^1.20150623.0",
+    "typescript": "^4.0.2"
+  },
   "devDependencies": {
+    "@types/jest": "^26.0.10",
+    "@types/node": "^14.6.0",
+    "@types/reach__router": "^1.3.5",
+    "@types/react": "^16.9.46",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-typist": "^2.0.1",
+    "@types/styled-components": "^5.1.3",
     "gh-pages": "^3.1.0"
   },
   "bit": {
